<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for bringing up the ArmyBot sensors and hardware</description>
  <maintainer email="adi.pachauri.444@gmail.com">ub2404-rpi5</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mpu9250_node</exec_depend>
  <exec_depend>urg_node2</exec_depend>
  <exec_depend>encoder_node</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>